# demo-kustom

./: db.sqlite3  pyproject.toml
custom_user/: settings.py  urls.py
custom_user/templates/: UserTickets.html  detailticket.html  edit.html  homepage.html  login.html  signup.html  ticket.html
kustom_user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
kustom_user/migrations/: 0001_initial.py  0002_auto_20200219_1830.py  0003_auto_20200219_2000.py  0004_auto_20200219_2012.py  0005_auto_20200219_2155.py  0006_auto_20200220_0119.py  0007_auto_20200220_0207.py  0008_auto_20200220_0431.py
